styles/CookieBanner.module.scss
@use "./Var.scss";
$border-radius: 0.25rem;

.container {
  background-color: rgba(Var.$background-light, 0.9);
  height: 2.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  width: auto;
  padding: 0.5rem 0.5rem 0.5rem 1.25rem;
  position: fixed;
  bottom: 6vh;
  left: 0;
  border-radius: 0% $border-radius $border-radius 0% / 0% $border-radius
    $border-radius 0%;
}
.link {
  display: inline-block;
  color: Var.$primary;
}
.text {
  display: inline-block;
  margin-right: 0.25rem;
  font-size: 1.125rem;
}
.buttonWrapper {
  display: inline-block;
}
.button {
  font-size: 1rem;
  display: inline-block;
  padding: 0.25rem 1rem;
  border-radius: $border-radius;
  cursor: pointer;
  margin: 0 0.25rem;
  &:hover {
    background-color: Var.$background-opposite;
    color: Var.$text-opposite;
    transition: 0.2s;
  }
}
.buttonNo {
  @extend .button;
  background-color: transparent;
  color: Var.$text;
  border: 1px solid Var.$background-light;
}
.buttonYes {
  @extend .button;
  background-color: rgba(Var.$primary, 0.4);
  color: Var.$text;
  border: 1px solid Var.$primary;
}

.hidden {
  animation-name: removed;
  animation-duration: 1s;
  animation-timing-function: ease;
  animation-fill-mode: forwards;
}
@keyframes removed {
  0% {
    left: 0;
  }
  100% {
    left: -30rem;
    display: none;
  }
}
.youtube {
  z-index: 1000;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  iframe {
    width: 100%;
    height: 100%;
    pointer-events: none;
  }
}
@media (max-width: 455px) {
  .container {
    bottom: 0;
    width: 100%;
    border-radius: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(Var.$background-light, 0.5);
  }
}
@media (max-width: 302px) {
  .container {
    display: none;
  }
}

